# weave

./: .gitignore  Makefile  README.md
azure/common/: copy_from_container.sh  copy_from_container_splitted.sh  copy_from_tar.sh  install_fzf_autocomplete.sh
docker/gramine/: .dockerignore  Dockerfile  Makefile.global  README.md  private_repos.conf
docker/spool/: .gitignore  .log_kubectl_ns_create  .log_kubectl_ns_delete  .log_pod_sgx-worker-1.yaml  .log_pod_sgx-worker-2.yaml  .log_pod_spark-master.yaml  .log_svc_sgx-worker-1.yaml  .log_svc_sgx-worker-2.yaml  .log_svc_spark-master.yaml  .vm_skus_eastus.json  Dockerfile  Dockerfile.native-spark  QEMU_Dockerfile  install_aks_deps.sh  nginx-map.conf  node_description  private_repos.conf  spark-direct-class.sh
examples/gramine/python/: GramineReadme.md  Makefile  Makefile.auto  WeaveReadme.md  pyproject.toml  python.manifest.template  run-unit-tests.sh  run_tests.sh  update_deps_and_toml.sh
examples/gramine/python/scripts/: test-forks.py
examples/gramine/python/tests/: test_http.py  test_math.py
examples/spark/: .dummy.sh  .gitignore  .static_test.sh  KnownIssues.md  OptimalConfigReadme.md  TrimDownReadme.md
experiments/: DemoReadme.md  ExperimentsReadme.md  ReprodcutionReadme.md  SparkMapReduceJobs.scala  run_weave_wordcount.sh
scripts/: test-pipeline.sh
weave/: .gitignore  .jvmrc  Developer.md  Readme.md  build.sbt  todo.list
weave-serial/: .gitignore  \  build.sbt
weave-serial/project/: plugins.sbt  protoc.sbt
weave/docs/: HistogramBenchmark.md  SamplingStrategy.md
weave/experiments/: syste-deps.yaml  (+3 more)
(+230 files in other folders)
