[tool.poetry]
name = "weave_gramine_python_tests"  # ⬅️ must use underscores here!
version = "0.1.0"
description = "Python scripts and tests for Gramine integration"
authors = ["Mahdi Soleimani <your@email.com>"]
packages = [{ include = "weave_gramine_python_tests", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.26.4"
scipy = ">=1.12.0"
pyelftools = "*"
click = "*"
jinja2 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

